# newsletter

./: .env  Cargo.toml  docker-compose.yaml
.github/workflows/: general.yml
scripts/: init_db.sh
src/: lib.rs  main.rs
tests/: health_check.rs
