[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="newsletter"
path = "src/lib.rs"

# bin is an array, because we can have only one library in a project, but multiple binaries
# if you want to manage multiple libraries in the same repository, use the workspace feature
[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4"
